--- a/src/Makefile.rs97
+++ b/src/Makefile.rs97
@@ -34,7 +34,9 @@ psp_menu_cheat.o \
 psp_menu_list.o \
 psp_editor.o \
 unzip.o \
+miniunz.o \
 ioapi.o \
+sha1.o \
 psp_fmgr.o
 
 CC = $(CROSS_COMPILE)gcc
