--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,65 +1,79 @@
 #
-# MSX port on WIZ 
+# MSX port on RS-97
 #
-# Copyright (C) 2009 Ludovic Jacomme (ludovic.jacomme@gmail.com)
+# by pingflood; 2018
 #
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-#
-MSX_VERSION=PixaMod
 
-TARGET = wizmsx
-SDL_CONFIG = sdl-config
-OBJS = gp2x_psp.o \
-fMSX.o MSX.o Patch.o Sound.o Disk.o \
-Z80.o I8255.o AY8910.o YM2413.o SCC.o V9938.o I8251.o \
-SDLgfx.o SDLsnd.o SDLfilter.o \
-emu2413.o emu2212.o emu2149.o \
-fmopl.o ymdeltat.o \
-psp_main.o \
-psp_sdl.o \
-psp_kbd.o \
-psp_font.o \
-psp_menu.o \
-psp_joy.o \
-psp_danzeff.o \
-psp_menu_set.o \
-psp_menu_help.o \
-psp_menu_joy.o \
-psp_menu_kbd.o \
-psp_menu_cheat.o \
-psp_menu_list.o \
-psp_editor.o \
-miniunz.o \
-unzip.o \
-sha1.o \
-psp_fmgr.o
+#CHAINPREFIX := /opt/rs97-toolchain
+#CROSS_COMPILE := $(CHAINPREFIX)/usr/bin/mipsel-linux-
+
+CC = $(CROSS_COMPILE)gcc
+CXX = $(CROSS_COMPILE)g++
+STRIP = $(CROSS_COMPILE)strip
+
+SYSROOT     := $(shell $(CC) --print-sysroot)
+
+MSX_VERSION=1.1.0
+
+TARGET = src/dist/dingux-msx.dge
+SDL_CONFIG = $(SYSROOT)/usr/bin/sdl-config
+OBJS = ./src/gp2x_psp.o \
+./src/cpudingux.o \
+./src/fMSX.o ./src/MSX.o ./src/Patch.o ./src/Sound.o ./src/Disk.o \
+./src/Z80.o ./src/I8255.o ./src/AY8910.o ./src/YM2413.o ./src/SCC.o ./src/V9938.o ./src/I8251.o \
+./src/SDLgfx.o ./src/SDLsnd.o ./src/SDLfilter.o \
+./src/emu2413.o ./src/emu2212.o ./src/emu2149.o \
+./src/fmopl.o ./src/ymdeltat.o \
+./src/psp_main.o \
+./src/psp_sdl.o \
+./src/psp_kbd.o \
+./src/psp_font.o \
+./src/psp_menu.o \
+./src/psp_joy.o \
+./src/psp_danzeff.o \
+./src/psp_menu_set.o \
+./src/psp_menu_help.o \
+./src/psp_menu_joy.o \
+./src/psp_menu_kbd.o \
+./src/psp_menu_cheat.o \
+./src/psp_menu_list.o \
+./src/psp_editor.o \
+./src/unzip.o \
+./src/ioapi.o \
+./src/sha1.o \
+./src/psp_fmgr.o
 
 DEFAULT_CFLAGS = $(shell $(SDL_CONFIG) --cflags)
 
-MORE_CFLAGS = -I/usr/include  -I. \
--DFMSX -DLSB_FIRST -DUNIX -DNARROW -DSOUND -DBPP16 -DZLIB -DMSX_VERSION=\"$(MSX_VERSION)\" \
--DLINUX_MODE
+MORE_CFLAGS  = -DFMSX -DUNIX -DNARROW -DSOUND -DBPP16 -DSDL -DLSB_FIRST -std=gnu11
+MORE_CFLAGS += -I. -I$(CHAINPREFIX)/usr/include/
+#MORE_CFLAGS += -DMPU_JZ4740 -mips32 -G0
+MORE_CFLAGS += -O3 -fsigned-char -ffast-math -fomit-frame-pointer -fno-strength-reduce
+#MORE_CFLAGS += -DDINGUX_MODE
+MORE_CFLAGS += -DLINUX_MODE
+MORE_CFLAGS += -DNO_STDIO_REDIRECT
+MORE_CFLAGS += -DMSX_VERSION=\"$(MSX_VERSION)\"
+MORE_CFLAGS += -O2 -fomit-frame-pointer -ffunction-sections -ffast-math -fsingle-precision-constant
 
-CFLAGS = $(DEFAULT_CFLAGS) $(MORE_CFLAGS) -fsigned-char -g 
+LDFLAGS  = -s -lm -lz `$(SDL_CONFIG) --libs`
+LDFLAGS += -Wl,--gc-sections
 
-LIBS += -L/usr/lib -L/usr/X11R6/lib -lSDL_image -lSDL -lXext -lX11 -lpng -ljpeg -lz -lm -lpthread
+LIBS += -lSDL_image -lpng
+LIBS += -lpthread  -ldl
+LIBS += -B$(SYSROOT)/usr/lib
+#LIBS += -R$(SYSROOT)/usr/lib
+LIBS += -L$(SYSROOT)/usr/lib
 
-all : $(TARGET)
+CFLAGS = $(DEFAULT_CFLAGS) $(MORE_CFLAGS) 
+
+.c.o:
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(TARGET): $(OBJS)
-	gcc $(CFLAGS) $(OBJS) $(LIBS) -o $(TARGET)
+	$(CC) $(LDFLAGS) $(CFLAGS) $(OBJS) $(LIBS) -o $(TARGET) && $(STRIP) $(TARGET)
+
+#install: $(TARGET)
+#	cp $< /media/dingux/local/emulators/dingux-msx/
 
 clean:
 	rm -f $(OBJS) $(TARGET)
