--- a/Makefile.rs97
+++ b/Makefile.rs97
@@ -47,13 +47,13 @@ DEFAULT_CFLAGS = $(shell $(SDL_CONFIG) --cflags)
 
 MORE_CFLAGS  = -DFMSX -DUNIX -DNARROW -DSOUND -DBPP16 -DSDL -DLSB_FIRST -std=gnu11
 MORE_CFLAGS += -I. -I$(CHAINPREFIX)/usr/include/
-MORE_CFLAGS += -DMPU_JZ4740 -mips32
+MORE_CFLAGS += -DMPU_JZ4740 -mips32 -G0
 MORE_CFLAGS += -O3 -fsigned-char -ffast-math -fomit-frame-pointer -fno-strength-reduce
 MORE_CFLAGS += -DDINGUX_MODE
 MORE_CFLAGS += -DLINUX_MODE
 MORE_CFLAGS += -DNO_STDIO_REDIRECT
 MORE_CFLAGS += -DMSX_VERSION=\"$(MSX_VERSION)\"
-MORE_CFLAGS += -O2 -fomit-frame-pointer -ffunction-sections -ffast-math -fsingle-precision-constant -G0
+MORE_CFLAGS += -O2 -fomit-frame-pointer -ffunction-sections -ffast-math -fsingle-precision-constant
 
 LDFLAGS  = -s -lm -lz `$(SDL_CONFIG) --libs`
 LDFLAGS += -Wl,--gc-sections
